# Cha

./: .cha.toml  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CNAME  Cargo.toml  LANDING.md  README.md  README.zh-CN.md  action.yml  artifacts.json  cha-cli-installer.ps1.txt  cha-cli-installer.sh.txt  changelog.rss  custom.css  dist-workspace.toml  index.html  oranda.json
.github/workflows/: ci.yml  vscode.yml  web.yml
artifacts/: index.html
book/: 404.html  book.toml  changelog.html  faq.html  index.html  install.html  intro.html  print.html  references.html
book/cli/: analyze.html  baseline.html  calibrate.html  completions.html  deps.html  fix.html  hotspot.html  index.html  init.html  layers.html  parse.html  plugin.html  preset.html  trend.html
book/configuration/: inline-directives.html  overview.html  presets.html
book/contributing/: architecture.html  index.html  releasing.html  writing-a-smell.html
book/lsp/: overview.html
book/output/: html.html  index.html  json.html  llm.html  sarif.html  terminal.html
book/pagefind/: pagefind-entry.json  pagefind.en_1fb22576da.pf_meta  pagefind.zh-cn_c337af1ab8fad.pf_meta
book/plugins/: development.html  reference.html
book/quick-start/: cli.html  editor.html  github-actions.html  pre-commit.html
book/recipes/: baseline.html  calibrate.html  custom-plugin-50loc.html  index.html  migrate-clippy.html  monorepo-ci.html  suppress-legacy.html
book/reference/: cli-manual.html  config-keys.html  json-schema.html
book/src/: SUMMARY.md  faq.md  install.md  intro.md  references.md
book/src-zh-CN/: SUMMARY.md  faq.md  install.md  intro.md  references.md
book/theme/: VENDOR.md  cha-mermaid.js  head.hbs
book/zh-CN/: 404.html  changelog.html  faq.html  index.html  install.html  intro.html  print.html  references.html
cha-cli/: .cha.toml  Cargo.toml
cha-cli/src/: analyze.rs  boundary_leak.rs  c_oop_filter.rs  calibrate.rs  dead_code_filter.rs  deps.rs  diff.rs  git_metrics.rs  hotspot.rs  layers.rs  main.rs  parse_cache.rs  plugin.rs  project_index.rs  tangled.rs  trend.rs
cha-cli/src/abstraction_leak_surgery/: mod.rs  tests.rs
cha-cli/src/anemic_domain/: mod.rs  tests.rs
cha-cli/src/boundary_leak/: mod.rs  tests.rs
cha-cli/src/c_oop_enrich/: mod.rs  tests.rs
cha-cli/src/circular_abstraction/: mod.rs  tests.rs
cha-cli/src/cross_boundary_chain/: mod.rs  tests.rs
cha-cli/src/cross_layer/: mod.rs  tests.rs
cha-cli/src/god_config/: mod.rs  tests.rs
cha-cli/src/leaky_public/: mod.rs  tests.rs
cha-cli/src/module_envy/: mod.rs  tests.rs
cha-cli/src/param_position/: mod.rs  tests.rs
cha-cli/src/primitive_representation/: mod.rs  tests.rs
cha-cli/src/stringly_typed_dispatch/: mod.rs  tests.rs
cha-cli/src/typed_intimacy/: mod.rs  tests.rs
cha-cli/tests/: integration.rs
cha-cli/tests/fixtures/: clean.ts  smelly.ts
cha-cli/tests/fixtures/c_oop/: widget.c  widget.h
cha-cli/tests/fixtures/c_profile/: medium.c
cha-cli/wix/: main.wxs
cha-core/: Cargo.toml  build.rs
cha-core/src/: baseline.rs  cache.rs  config.rs  health.rs  html_reporter.rs  ignore.rs  lib.rs  model.rs  path_shape.rs  plugin.rs  query.rs  registry.rs  reporter.rs  source.rs  tests.rs  wasm.rs
cha-core/src/graph/: layers.rs  mod.rs  module_graph.rs
cha-core/src/plugins/: api_surface.rs  async_callback_leak.rs  brain_method.rs  cognitive_complexity.rs  comments.rs  complexity.rs  coupling.rs  data_class.rs  data_clumps.rs  dead_code.rs  design_pattern.rs  divergent_change.rs  duplicate_code.rs  error_handling.rs  feature_envy.rs  god_class.rs  hardcoded_secret.rs  hub_like.rs  inappropriate_intimacy.rs  layer_violation.rs  lazy_class.rs  length.rs  long_parameter_list.rs  message_chain.rs  middle_man.rs  mod.rs  naming.rs  primitive_obsession.rs  refused_bequest.rs  shotgun_surgery.rs  speculative_generality.rs  switch_statement.rs  temporary_field.rs  todo_tracker.rs  unsafe_api.rs
cha-core/tests/: .cha.toml  common.rs  plugin_tests.rs  test_api_surface.rs  test_comments.rs  test_complexity.rs  test_coupling.rs  test_data_class.rs  test_data_clumps.rs  test_dead_code.rs  test_duplicate.rs  test_error_handling.rs  test_feature_envy.rs  test_inappropriate_intimacy.rs  test_layer_violation.rs  test_lazy_class.rs  test_length.rs  test_long_param.rs  test_message_chain.rs  test_middle_man.rs  test_naming.rs  test_primitive_obsession.rs  test_refused_bequest.rs  test_speculative_generality.rs  test_switch.rs  test_temporary_field.rs
cha-core/wit/: plugin.wit
cha-lsp/: .cha.toml  Cargo.toml
cha-lsp/src/: lib.rs  main.rs
cha-parser/: .cha.toml  Cargo.toml
cha-parser/src/: c_imports.rs  c_lang.rs  cpp.rs  golang.rs  golang_imports.rs  lib.rs  model.rs  python.rs  python_imports.rs  rust_imports.rs  rust_lang.rs  switch_arms.rs  type_aliases.rs  type_ref.rs  typescript.rs  typescript_imports.rs
cha-parser/tests/: .cha.toml  cpp_enhancements.rs  fixtures_test.rs
cha-parser/tests/fixtures/: classes.cpp  cognitive.go  complex.go  complex.rs  exports.rs  exports.tsx  header.h  imports.rs  simple.c  simple.cpp  simple.go  simple.py  simple.rs  simple.ts  structs.go  structs.rs
cha-plugin-sdk/: Cargo.toml
cha-plugin-sdk-macros/: Cargo.toml
cha-plugin-sdk/macros/: Cargo.toml  build.rs
cha-plugin-sdk/macros/src/: lib.rs
cha-plugin-sdk/macros/wit/: plugin.wit
cha-plugin-sdk/src/: lib.rs  test_utils_impl.rs
changelog/: index.html
changelog/v0.6.2/: index.html
changelog/v0.6.3/: index.html
changelog/v0.6.4/: index.html
changelog/v0.6.5/: index.html
docs/: plugin-development.md  plugins.md  plugins.zh-CN.md
examples/wasm-plugin-react-hooks/: .gitignore  Cargo.toml
examples/wasm-plugin-react-hooks/src/: lib.rs
examples/wasm-plugin-todo-tracker/: .gitignore  Cargo.toml
examples/wasm-plugin-todo-tracker/src/: lib.rs
public/: CNAME
static/: 404.html  cha-landing.css  default.cha.toml  findings.schema.json  gen_logo.py  gen_og_card.py
vscode-cha/: .gitignore  .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.test.json
wit/: plugin.wit
xtask/: Cargo.toml
(+361 files in other folders)
