[workspace]
members = ["cha-core", "cha-parser", "cha-cli", "cha-lsp", "xtask"]
exclude = ["examples/wasm-plugin-example", "examples/wasm-plugin-hardcoded", "cha-plugin-sdk"]
resolver = "2"

[workspace.package]
version = "1.4.0"
edition = "2024"
license = "MIT"
authors = ["W-Mai <w-mai@outlook.com>"]
repository = "https://github.com/W-Mai/Cha"
homepage = "https://github.com/W-Mai/Cha"
keywords = ["code-quality", "static-analysis", "linter", "ast", "wasm"]
categories = ["development-tools", "development-tools::testing"]

[workspace.dependencies]
cha-core = { path = "cha-core", version = "1.4.0" }
cha-parser = { path = "cha-parser", version = "1.4.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tree-sitter = "0.25"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
