[package]
name = "cha-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cha"
path = "src/main.rs"

[dependencies]
cha-core.workspace = true
cha-parser.workspace = true
clap = { version = "4", features = ["derive"] }
glob = "0.3.3"
dirs = "5"
ignore = "0.4"
indicatif = "0.18.4"
rayon = "1"
wasi-preview1-component-adapter-provider = "43.0.0"
wit-component = "0.246.2"
anyhow = "1.0.102"

[dev-dependencies]
serde_json.workspace = true
