[package]
name = "cha-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cha — pluggable code smell detection CLI (察)"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.wix]
upgrade-guid = "A422BEBC-2ACC-4C9B-A185-0A5355D7BBFB"
path-guid = "D106BC45-7876-4F40-B3DA-86478496594B"
license = false
eula = false

[[bin]]
name = "cha"
path = "src/main.rs"

[dependencies]
cha-core.workspace = true
cha-parser.workspace = true
cha-lsp = { path = "../cha-lsp", version = "1.8.0" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
glob = "0.3.3"
dirs = "5"
ignore = "0.4"
indicatif = "0.18.4"
rayon = "1"
regex = "1"
serde.workspace = true
serde_json.workspace = true
wasi-preview1-component-adapter-provider = "43.0.0"
wit-component = "0.246.2"
anyhow = "1.0.102"

[dev-dependencies]
serde_json.workspace = true
