[package]
name = "cha-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core analysis engine for Cha — pluggable code smell detection"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["src/**", "wit/plugin.wit", "Cargo.toml", "build.rs"]

[dependencies]
regex = "1.12.3"
schemars = { version = "1.2.1", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
wasmtime = { version = "43", features = ["component-model"] }
wasmtime-wasi = "43"

[dev-dependencies]
proptest = "1"
