[package]
name = "cha-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LSP server for Cha — real-time code smell diagnostics"
repository.workspace = true
homepage.workspace = true
publish = false
keywords.workspace = true
categories.workspace = true

[dependencies]
cha-core.workspace = true
cha-parser = { path = "../cha-parser", version = "0.1.0" }
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
