[package]
name = "cha-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LSP server for Cha — real-time code smell diagnostics"
repository.workspace = true
homepage.workspace = true
publish = true

[package.metadata.dist]
dist = false
keywords.workspace = true
categories.workspace = true

[dependencies]
cha-core.workspace = true
cha-parser = { path = "../cha-parser", version = "1.6.0" }
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
ignore = "0.4"
dirs = "6"
