[package]
name = "cha-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-sitter based AST parser for Cha (TypeScript, Rust)"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cha-core.workspace = true
tree-sitter.workspace = true
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"

[dev-dependencies]
proptest = "1"