[workspace]
members = [".", "macros"]
resolver = "2"

[package]
name = "cha-plugin-sdk"
version = "0.1.0"
edition = "2024"
description = "SDK for building Cha WASM analyzer plugins"
license = "MIT"
repository = "https://github.com/W-Mai/Cha"

[dependencies]
cha-plugin-sdk-macros = { path = "macros" }

[features]
test-utils = ["dep:cha-core", "dep:cha-parser", "dep:anyhow", "dep:toml"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cha-core = { git = "https://github.com/W-Mai/Cha", optional = true }
cha-parser = { git = "https://github.com/W-Mai/Cha", optional = true }
anyhow = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
