[workspace]
members = [".", "macros"]
resolver = "2"

[package]
name = "cha-plugin-sdk"
version = "1.0.10"
edition = "2024"
description = "SDK for building Cha WASM analyzer plugins — zero-config, no WIT file needed"
license = "MIT"
repository = "https://github.com/W-Mai/Cha"
homepage = "https://github.com/W-Mai/Cha"
keywords = ["wasm", "plugin", "code-quality", "static-analysis", "cha"]
categories = ["development-tools", "wasm"]

[dependencies]
cha-plugin-sdk-macros = { path = "macros", version = "1.0.10" }

[features]
test-utils = ["dep:cha-core", "dep:cha-parser", "dep:anyhow", "dep:toml"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cha-core = { path = "../cha-core", version = "1.0.10", optional = true }
cha-parser = { path = "../cha-parser", version = "1.0.10", optional = true }
anyhow = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
