[package]
name = "cha-plugin-sdk-macros"
version = "1.13.0"
edition = "2024"
description = "Proc-macro internals for cha-plugin-sdk"
license = "MIT"
repository = "https://github.com/W-Mai/Cha"
include = ["src/**", "wit/plugin.wit", "Cargo.toml", "build.rs"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
