[package]
name = "cha-plugin-react-hooks"
version = "1.20.0"
edition = "2024"
description = "Detect React hooks rule violations"
authors = ["Cha contributors"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cha-plugin-sdk = { path = "../../cha-plugin-sdk" }
wit-bindgen = "0.55"

[dev-dependencies]
cha-plugin-sdk = { path = "../../cha-plugin-sdk", features = ["test-utils"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
