[package]
name = "cha-plugin-todo-tracker"
version = "1.18.0"
edition = "2024"
description = "Track TODO/FIXME/HACK/BUG/WIP comments with metadata, priority, and expiration"
authors = ["Cha contributors"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cha-plugin-sdk = { path = "../../cha-plugin-sdk" }
wit-bindgen = "0.55"

[dev-dependencies]
cha-plugin-sdk = { path = "../../cha-plugin-sdk", features = ["test-utils"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
